--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "class-validator": "^0.14.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
